# termsheet-extractor

./: .gitignore  20-02-26-termsheet-extractor.md  INSTRUCTIONS.md  README.md  build-frontend.sh
.github/workflows/: backend-tests.yml  frontend-tests.yml
backend/: .env.example  .env.test  alembic.ini  docker-compose.yaml  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_termsheet_schema.py  002_approved_and_extraction_metadata.py
backend/core/: config.py  log.py
backend/db/: db.py
backend/db/models/: __init__.py  event.py  extraction_metadata.py  product.py  underlying.py
backend/docker/: Dockerfile.alembic  Dockerfile.app  Dockerfile.db  Dockerfile.test
backend/routes/: extraction.py  health.py  products.py
backend/schemas/: product.py  sse.py  termsheet.py
backend/services/: persistence.py  products.py  termsheet_llm.py  validation.py
backend/services/llm/: __init__.py  agent.py  prompts.py  tools.py
backend/services/pipeline/: __init__.py  orchestrator.py  parse.py  persist.py  validate.py
backend/tests/: conftest.py  factories.py  test_termsheet_excel.py  test_validation.py
backend/utils/: job_store.py  markdown_store.py
blobstore/XS3184638594/: XS3184638594_Termsheet_Final.md
data/: XS3184638594_data tables.xlsx
docs/adr/: 20-02-26-termsheet-extractor.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ApprovalActions.tsx  ApprovalConfirmation.tsx  DashboardLayout.tsx  ErrorDisplay.tsx  EventsTable.tsx  (+9 more)
(+3 files in other folders)
