[tool.poetry]
package-mode = false

[project]
name = "bluebridge"
version = "0.1.0"
description = "Termsheet data extraction and validation"
authors = [
    {name = "sam",email = "ssamrroberts@gmail.com"}
]
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "fastapi (>=0.115.0,<1.0.0)",
    "uvicorn (>=0.34.0,<1.0.0)",
    "sqlalchemy (>=2.0.0,<3.0.0)",
    "psycopg2-binary (>=2.9.0,<3.0.0)",
    "pydantic-settings (>=2.0.0,<3.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "alembic (>=1.14.0,<2.0.0)",
    "python-multipart (>=0.0.9,<1.0.0)",
    "pymupdf4llm (>=0.0.17,<1.0.0)",
    "langchain (>=1.2.9,<2.0.0)",
    "langchain-openai (>=1.1.7,<2.0.0)",
]


[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0,<9.0.0"
openpyxl = "^3.1.5"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that call the LLM (deselect with '-m \"not integration\"')",
]
addopts = "-m 'not integration'"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
